Frontend: Added thankyou page

--- a/AncestryCodeTestFrontend/styles/main.scss
+++ b/AncestryCodeTestFrontend/styles/main.scss
@@ -2,8 +2,6 @@
 //Foundation with flexbox suppoer
 @include foundation-everything(true);
 
-.feedback-survey{
-    .feedback-survey__row{
+.main-wrapper{
         width: 40rem;
-    }
 }
