Frontend: Added error messages and styling to survey

--- a/AncestryCodeTestFrontend/styles/main.scss
+++ b/AncestryCodeTestFrontend/styles/main.scss
@@ -5,3 +5,8 @@
 .main-wrapper{
         width: 60rem;
 }
+
+//Make the help test red on error pages
+.ng-invalid .help-block{
+        color:red;
+}
